@@ -15,14 +15,22 @@ cutoffs = [
     _THUNDERBIRD
 ]
 
+# Convert urls found in mailin text into links using the markdown syntax.
+url_re = re.compile('http(s)?:[^\s]+')
+def url_to_markdown_link(match):
+    url = match.group()
+    title = url.replace('_', '\_')
+    return '[%s](%s)' % (title, url)
+
 def text_scrubber(text, mimetype=None):
     # We're assuming plain text
     if mimetype is not None and mimetype != "text/plain":
         raise Exception("Unsupported mime type: %s" % mimetype)
-    
+
     for pattern in cutoffs:
         match = pattern.search(text)
         if match:
             text = text[:match.start()].strip()
-            
+
+    text = url_re.sub(url_to_markdown_link, text)
     return markdown2.markdown(text)
